--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start": "egg-scripts start --daemon --title=egg-server-bankinfo",
     "stop": "egg-scripts stop --title=egg-server-bankinfo",
     "dev": "egg-bin dev",
+    "build": "APP_ROOT=$PWD/app/web umi build",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
