--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
     "egg-view-assets": "^1.6.1",
-    "egg-view-nunjucks": "^2.2.0"
+    "egg-view-nunjucks": "^2.2.0",
+    "mz": "^2.7.0",
+    "mz-modules": "^2.1.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
