--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "declarations": true
   },
   "dependencies": {
+    "docx-templates": "^4.3.0",
     "egg": "^2.15.1",
     "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
     "egg-view-assets": "^1.6.1",
     "egg-view-nunjucks": "^2.2.0",
+    "jszip": "^3.5.0",
     "mz": "^2.7.0",
     "mz-modules": "^2.1.0"
   },
