--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "egg-view-assets": "^1.6.1",
     "egg-view-nunjucks": "^2.2.0",
     "jszip": "^3.5.0",
+    "moment": "^2.27.0",
     "mz": "^2.7.0",
     "mz-modules": "^2.1.0"
   },
