chore: egg env config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     - ./:/usr/src/project
     environment:
     - NODE_ENV=production
+    - EGG_SERVER_ENV=production
     - docker_db=db
     ports:
       - "7001:7001"
