feat: 新增贷款金额大写

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "start": "egg-scripts start --title=egg-server-bankinfo",
     "stop": "egg-scripts stop --title=egg-server-bankinfo",
-    "dev": "egg-bin dev",
+    "dev": "docker_redis=localhost docker_db=localhost:27017 egg-bin dev",
     "build": "APP_ROOT=$PWD/app/web UMI_ENV=pro umi build",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
